--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!-- Style -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Icons -->
+    <script src="https://kit.fontawesome.com/27431dafbf.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div id="container">
@@ -31,6 +34,60 @@
                 <a href="" id="readmore">Read More</a>
             </div>
         </header>
+
+        <!-- first panel -->
+        <div id="first-panel" class="unipadding">
+            <div id="left-text">
+                <h4>Professional Tool</h4>
+                <h1>Programming<br>Language Portal</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste perferendis laudantium ut odit sed perspiciatis dignissimos facere aspernatur. Aliquam, dicta.</p><br>
+                <div id="buttons">
+                    <a href="" id="getstarted2">Get Started</a>
+                    <a href="" id="readmore2">Read More</a>
+                </div>
+            </div>
+            <img src="Images/pxfuel1st.jpg">
+        </div>
+
+        <!-- middle panel -->
+        <div id="middle-panel" class="unipadding">
+            <div id="caption">
+                <h1>Our Features</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatem id nulla corporis repudiandae quod alias consequuntur accusamus delectus. Quo, at. Optio in officiis culpa omnis facere! Dolore, nisi ipsa.</p>
+            </div>
+            <div id="blocks">
+                <div class="block">
+                    <i class="fa-solid fa-code"></i>
+                    <h3>Optimized code</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="block">
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                    <h3>Mobile Friendly</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="block">
+                    <i class="fa-solid fa-brush"></i>
+                    <h3>Unique Styles</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="block">
+                    <i class="fa-solid fa-desktop"></i>
+                    <h3>Best solutions</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="block">
+                    <i class="fa-solid fa-clock"></i>
+                    <h3>Time saving</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="block">
+                    <i class="fa-solid fa-desktop"></i>
+                    <h3>Professional Team</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
