--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
                 </div>
             </div>
         </div>
+
+        <!-- Last Panel -->
+        <div id="last-panel" class="unipadding">
+            <div id="p60">
+                <h1>Get started<br>with our portal</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis id debitis obcaecati aut minus sapiente tempore </p><br>
+                <a href="">Get Started</a>    
+            </div>
+            <div id="p40">
+                <img src="Images/pxfuel2.jpg">
+            </div>
+        </div>
     </div>
 </body>
 </html>
